--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   max-width: 500px;
 }
 
+#display-main, #display-prev {
+  height: 1.4em;
+  background-color: #ddd;
+  margin-bottom: .2em;
+}
+
 #interface {
   display: -ms-grid;
   display: grid;
