--- a/style.scss
+++ b/style.scss
@@ -1,20 +1,50 @@
+$white: #FAFAFA;
+$affirm: #03AA6D;
+$warn: #b3412e;
+* {
+    font-family: monospace;
+}
+
+button {
+    border: solid #ddd 1px;
+    border-radius: 0.2em;
+    cursor: pointer;
+    background-color: $white;
+    padding: 1em 0.5em;
+}
 #calculator {
-    max-width: 500px;
+    margin: auto;
+    padding: 0.2em;
+    max-width: 300px;
+    background-color: #E6E6E6;
 }
 #display-main, #display-prev {
-    height: 1.4em;
+    height: 2rem;
+    text-align: right;
+    font-size: 1.5em;
     background-color: #ddd;
     margin-bottom: .2em;
 }
 #interface {
-    display: grid;
     grid-template-columns: 2fr 1fr;
 }
-#numpad {
+#interface, #numpad, #operations {
     display: grid;
+    gap: 0.25em;
+}
+#numpad {
     grid-template-columns: repeat(3, 1fr);
 }
 #operations {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
+    & > button[data-btn="del"], > button[data-btn="clear"] {
+        color: $white;
+        background-color: $warn;
+    }
+    & > button[data-btn="equals"] {
+        color: $white;
+        background-color: $affirm;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
 }
