Additional input protections and UI improvements

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ button {
   padding: 1em 0.5em;
 }
 
+button:hover {
+  background-color: #ececec;
+}
+
 #calculator {
   margin: auto;
   padding: 0.2em;
@@ -21,8 +25,9 @@ button {
   height: 2rem;
   text-align: right;
   font-size: 1.5em;
-  background-color: #ddd;
+  background-color: #dadada;
   margin-bottom: .2em;
+  padding: 0 0.25em;
 }
 
 #interface {
