--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 $white: #FAFAFA;
 $affirm: #03AA6D;
 $warn: #b3412e;
+$pressed: #ececec;
 * {
     font-family: monospace;
 }
@@ -11,6 +12,9 @@ button {
     cursor: pointer;
     background-color: $white;
     padding: 1em 0.5em;
+    &:hover {
+        background-color: $pressed;
+    }
 }
 #calculator {
     margin: auto;
@@ -22,8 +26,9 @@ button {
     height: 2rem;
     text-align: right;
     font-size: 1.5em;
-    background-color: #ddd;
+    background-color: #dadada;
     margin-bottom: .2em;
+    padding: 0 0.25em;
 }
 #interface {
     grid-template-columns: 2fr 1fr;
